precompiles/utils/macro/tests/compile-fail/precompile/discriminant/type-mismatch-2.stderr
error: The discriminant function must only take code address (H160) and remaining gas (u64) as parameters.
  --> tests/compile-fail/precompile/discriminant/type-mismatch-2.rs:30:2
   |
30 |     fn discriminant(address: H160) -> Option<u64> {
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
